Linked HTML to JS and CSS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Google Weather Replication</title>
   </head>
-  <body></body>
+  <body>
+    <script src="src/index.js /"></script>
+  </body>
 </html>
