Added HTML structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,37 @@
   </head>
   <body>
     <div class="container">
-      <h1>Google Weather Project</h1>
+      <div class="weather-app">
+        <h1>London</h1>
+        <ul>
+          <li>Monday 20:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Partly Cloudy"
+            />
+            12°C | °F
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Precipitation: 10%</li>
+              <li>Humidity: 56%</li>
+              <li>Wind: 5mph</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/hionkiong/google-weather-project"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Hyunkyung Choi
+      </small>
     </div>
     <script src="src/index.js /"></script>
   </body>
