--- a/index.html
+++ b/index.html
@@ -14,33 +14,44 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>London</h1>
-        <ul>
-          <li>Monday 20:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              alt="Partly Cloudy"
-            />
-            12°C | °F
-          </div>
-          <div class="col-md-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>London</h1>
             <ul>
-              <li>Precipitation: 10%</li>
-              <li>Humidity: 56%</li>
-              <li>Wind: 5mph</li>
+              <li>Monday 20:00</li>
+              <li>Clear</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="Partly Cloudy"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong>
+                  <span class="units">°C | <a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li>Precipitation: 10%</li>
+                <li>Humidity: 56%</li>
+                <li>Wind: 5mph</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
           <a
             href="https://github.com/hionkiong/google-weather-project"
             target="_blank"
-            >Open-source code</a
+          >
+            Open-source code</a
           >
           by Hyunkyung Choi
         </small>
