Updated to show live temperature and time

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Monday 20:00</li>
+              <li id="dayAndTime"></li>
               <li id="description"></li>
             </ul>
           </div>
@@ -40,9 +40,9 @@
             </div>
             <div class="col-md-6">
               <ul>
-                <li>Precipitation: 10%</li>
-                <li>Humidity: 56%</li>
-                <li>Wind: 5mph</li>
+                <li>Feels like: <span id="feelsLike"></span>°C</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>m/s</li>
               </ul>
             </div>
           </div>
