--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="Partly Cloudy"
-                  class="float-left"
-                />
+                <img src=""" alt="Partly Cloudy" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units">°C | <a href="#">°F</a></span>
