--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form">
+            <div class="row">
+              <div class="col-9 mb-3">
+                <input
+                  type="search"
+                  placeholder="Type a city..."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                  autofocus="on"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
@@ -27,7 +48,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="weather-temperature">
-                <img src=""" alt="Partly Cloudy" id="icon" class="float-left" />
+                <img src=""" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units">°C | <a href="#">°F</a></span>
