Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                 <img src=""" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
-                  <span class="units">°C | <a href="#">°F</a></span>
+                  <span class="units">
+                    <a href="#" id="celsiusLink" class="active">°C</a> |
+                    <a href="#" id="fahrenheitLink">°F</a>
+                  </span>
                 </div>
               </div>
             </div>
