Added forecast API

--- a/index.html
+++ b/index.html
@@ -66,68 +66,7 @@
               </ul>
             </div>
           </div>
-          <div class="row weather-forecast">
-            <div class="col-2">
-              <span class="time">16:00</span>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                alt=""
-              />
-              <div class="weather-forecast-temperature">
-                <strong>18°</strong> 13°
-              </div>
-            </div>
-            <div class="col-2">
-              <span class="time">17:00</span>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                alt=""
-              />
-              <div class="weather-forecast-temperature">
-                <strong>18°</strong> 13°
-              </div>
-            </div>
-            <div class="col-2">
-              <span class="time">18:00</span>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                alt=""
-              />
-              <div class="weather-forecast-temperature">
-                <strong>18°</strong> 13°
-              </div>
-            </div>
-            <div class="col-2">
-              <span class="time">19:00</span>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                alt=""
-              />
-              <div class="weather-forecast-temperature">
-                <strong>18°</strong> 13°
-              </div>
-            </div>
-            <div class="col-2">
-              <span class="time">20:00</span>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                alt=""
-              />
-              <div class="weather-forecast-temperature">
-                <strong>18°</strong> 13°
-              </div>
-            </div>
-            <div class="col-2">
-              <span class="time">21:00</span>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                alt=""
-              />
-              <div class="weather-forecast-temperature">
-                <strong>18°</strong> 13°
-              </div>
-            </div>
-          </div>
+          <div class="row weather-forecast" id="forecast"></div>
         </div>
         <small>
           <a
