--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="weather-temperature">
-                <img src=""" alt="" id="icon" class="float-left" />
+                <img src="" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units">
